mobile layout bugs

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -14,8 +14,9 @@ header
   margin: auto
 main
   display: flex
-  margin: 4em 0 0 0
+  margin: 4em auto 0 auto
   justify-content: center
+  width: 80em
 
 .heading
   font-weight: $thick-font
@@ -74,9 +75,16 @@ main
 @media screen and ( max-width: $desktop)
   main
     display: block
+    width: 100%
   header
     width: 100%
     font-size: 0.7em
+  .col 
+    margin: 0 auto
+  .card
+    margin: 1em auto
+    max-width: 19em
   p.caption:nth-child(3)
     font-size: 1.4em
-    margin: 0.9em 1em
+    margin: 0.9em auto
+    max-width: 20em
